force-app/main/default/objects/Project_User_Assignment__c/Project_User_Assignment__c.object-meta.xml
<CustomObject>
    <description>Assigns user to a Project.</description>
    <label>Project User Assignment</label>
    <nameField>
        <displayFormat>PUA-{0000}</displayFormat>
        <label>Project User Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project User Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>