force-app/main/default/objects/Project_User_Assignment__c/fields/Concatenated_Name__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Name__c</fullName>
    <formula>Project__r.Id &amp;  '::' &amp; User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concatenated Name</label>
    <type>Text</type>
</CustomField>