force-app/main/default/objects/Project_User_Assignment__c/fields/Created_At_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Created_At_Harvest__c</fullName>
    <description>Date and time the task assignment was created on the Harvest system</description>
    <inlineHelpText>Date and time the task assignment was created on the Harvest system</inlineHelpText>
    <label>Created At (Harvest)</label>
    <type>DateTime</type>
</CustomField>