force-app/main/default/objects/Project_User_Assignment__c/fields/Is_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the user has project manager permissions for the project.</description>
    <inlineHelpText>Determines if the user has project manager permissions for the project.</inlineHelpText>
    <label>Project Manager</label>
    <type>Checkbox</type>
</CustomField>