force-app/main/default/objects/Project_User_Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>The Project associated with the User</description>
    <inlineHelpText>The Project associated with the User</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project User Assignments</relationshipLabel>
    <relationshipName>Project_User_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>