force-app/main/default/objects/Project_User_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user associated with the project</description>
    <inlineHelpText>The user associated with the project</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_User_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>